// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination <Compact /> it renders correctly when a middle page is active 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(17,17,17,0.1);
}

.c2 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #039842;
  color: #FFFFFF;
  font-weight: 600;
}

.c1 {
  margin: 0 4px;
}

.c3 {
  font-family: 'sofarsounds-icon-font' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3:before {
  color: #000000;
}

.c3.icon-facebook:before {
  content: '\\e920';
}

.c3.icon-instagram:before {
  content: '\\e929';
}

.c3.icon-spotify:before {
  content: '\\e937';
}

.c3.icon-twitter:before {
  content: '\\e93f';
}

.c3.icon-youtube:before {
  content: '\\e944';
}

.c3.icon-facebookOutline:before {
  content: '\\e91e';
}

.c3.icon-instagramOutline:before {
  content: '\\e924';
}

.c3.icon-spotifyOutline:before {
  content: '\\e927';
}

.c3.icon-twitterOutline:before {
  content: '\\e92d';
}

.c3.icon-youtubeOutline:before {
  content: '\\e92e';
}

.c3.icon-caretUp:before {
  content: '\\e932';
}

.c3.icon-caretDown:before {
  content: '\\e919';
}

.c3.icon-caretLeft:before {
  content: '\\e933';
}

.c3.icon-caretRight:before {
  content: '\\e934';
}

.c3.icon-caretCircleDown:before {
  content: '\\e91b';
}

.c3.icon-chevronLeft:before {
  content: '\\e92a';
}

.c3.icon-chevronRight:before {
  content: '\\e93c';
}

.c3.icon-chevronUp:before {
  content: '\\e93b';
}

.c3.icon-chevronDown:before {
  content: '\\e931';
}

.c3.icon-moveVertical:before {
  content: '\\e92c';
}

.c3.icon-check:before {
  content: '\\e938';
}

.c3.icon-checkCircle:before {
  content: '\\e902';
}

.c3.icon-checkSquare:before {
  content: '\\e943';
}

.c3.icon-alertCircle:before {
  content: '\\e91a';
}

.c3.icon-alertTriangle:before {
  content: '\\e901';
}

.c3.icon-calendar:before {
  content: '\\e917';
}

.c3.icon-time:before {
  content: '\\e93a';
}

.c3.icon-timeHand:before {
  content: '\\e939';
}

.c3.icon-calendarAdd:before {
  content: '\\e93d';
}

.c3.icon-byob:before {
  content: '\\e908';
}

.c3.icon-close:before {
  content: '\\e918';
}

.c3.icon-commercial:before {
  content: '\\e915';
}

.c3.icon-disabled:before {
  content: '\\e910';
}

.c3.icon-eye:before {
  content: '\\e91c';
}

.c3.icon-video:before {
  content: '\\e921';
}

.c3.icon-happyMask:before {
  content: '\\e922';
}

.c3.icon-helpCircleOutline:before {
  content: '\\e925';
}

.c3.icon-ellipsisHorizontal:before {
  content: '\\e92b';
}

.c3.icon-no:before {
  content: '\\e92f';
}

.c3.icon-pet:before {
  content: '\\e907';
}

.c3.icon-readGlasses:before {
  content: '\\e930';
}

.c3.icon-residential:before {
  content: '\\e916';
}

.c3.icon-tree:before {
  content: '\\e906';
}

.c3.icon-heartPulse:before {
  content: '\\e91f';
}

.c3.icon-homeWorld:before {
  content: '\\e923';
}

.c3.icon-travelWorld:before {
  content: '\\e928';
}

.c3.icon-musicTicket:before {
  content: '\\e926';
}

.c3.icon-musicLove:before {
  content: '\\e91d';
}

.c3.icon-plus:before {
  content: '\\e935';
}

.c3.icon-padlock:before {
  content: '\\e936';
}

.c3.icon-search:before {
  content: '\\e830';
}

.c3.icon-music:before {
  content: '\\e942';
}

.c3.icon-mail:before {
  content: '\\e941';
}

.c3.icon-expandHorizontal:before {
  content: '\\e93e';
}

.c3.icon-reset:before {
  content: '\\e912';
}

.c3.icon-pencil:before {
  content: '\\e904';
}

.c3.icon-trashCan:before {
  content: '\\e94a';
}

.c3.icon-fileFolder:before {
  content: '\\e940';
}

.c3.icon-arrowUp:before {
  content: '\\e913';
}

.c3.icon-arrowLeft:before {
  content: '\\e949';
}

.c3.icon-info:before {
  content: '\\e90d';
}

.c3.icon-infoOutline:before {
  content: '\\e948';
}

.c3.icon-feedback:before {
  content: '\\e905';
}

.c3.icon-feedbackOutline:before {
  content: '\\e947';
}

.c3.icon-media:before {
  content: '\\e909';
}

.c3.icon-mediaOutline:before {
  content: '\\e946';
}

.c3.icon-concert:before {
  content: '\\e90a';
}

.c3.icon-concertOutline:before {
  content: '\\e945';
}

.c3.icon-map:before {
  content: '\\e914';
}

.c3.icon-grid:before {
  content: '\\e903';
}

.c3.icon-photos:before {
  content: '\\e911';
}

.c3.icon-artistParking:before {
  content: '\\e90f';
}

.c3.icon-guestParking:before {
  content: '\\e90e';
}

.c3.icon-eventSetUp:before {
  content: '\\e90c';
}

.c3.icon-fanExperience:before {
  content: '\\e90b';
}

.c3.icon-rock:before {
  content: '\\e900';
}

<Component
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
        "large": "8px",
      },
      "colors": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueChristmas": "#3498DB",
        "blueMagic": "#34495E",
        "blueSmoke": "#949494",
        "brownSugar": "#9B525F",
        "checkBerry": "#98035A",
        "darkSmoke": "#767676",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "greenGarden": "#19BC9B",
        "greenOnions": "#8BC34B",
        "macyGrey": "#DBDBDB",
        "mellowYellow": "#F1C410",
        "orangeCrush": "#F39C12",
        "paintItBlack": "#333333",
        "peaches": "#F99973",
        "pinkTriangle": "#E91E63",
        "primary": "#039842",
        "purpleHaze": "#3F51B5",
        "purplePills": "#9B59B6",
        "redRedWine": "#EF4423",
        "royalBlood": "#FF5000",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
        "yellowSubmarine": "#FFD426",
      },
      "dimensions": Object {
        "button": Object {
          "default": Object {
            "height": "44px",
            "padding": "0 25px",
          },
          "small": Object {
            "height": "40px",
            "padding": "0 15px",
          },
        },
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
        "radioBox": "20px",
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": Object {
          "lg": "48px",
          "md": "34px",
          "xs": "24px",
        },
        "h2": Object {
          "lg": "34px",
          "md": "24px",
          "xs": "20px",
        },
        "h3": Object {
          "lg": "24px",
          "md": "20px",
          "xs": "16px",
        },
        "h4": Object {
          "lg": "20px",
          "md": "16px",
          "xs": "16px",
        },
        "h5": Object {
          "lg": "16px",
          "md": "14px",
          "xs": "14px",
        },
        "h6": Object {
          "lg": "14px",
          "md": "14px",
          "xs": "14px",
        },
        "overline": "10px",
        "title": Object {
          "lg": "54px",
          "md": "38px",
          "xs": "26px",
        },
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Compact
    currentPage={6}
    onClickPage={[MockFunction]}
    totalPages={15}
  >
    <PageBubble
      isActive={false}
      onClick={[Function]}
      page={1}
      qaId=""
    >
      <Styled(styled.div)
        as="button"
        clickable={true}
        data-qaid="-page-1"
        onClick={[Function]}
      >
        <button
          className="c0 c1"
          data-qaid="-page-1"
          onClick={[Function]}
        >
          1
        </button>
      </Styled(styled.div)>
    </PageBubble>
    <Ellipsis>
      <styled.div>
        <div
          className="c2"
        >
          <Icon
            name="ellipsisHorizontal"
          >
            <styled.i
              className="icon-ellipsisHorizontal "
            >
              <i
                className="c3 icon-ellipsisHorizontal "
              />
            </styled.i>
          </Icon>
        </div>
      </styled.div>
    </Ellipsis>
    <Pages
      currentPage={6}
      displayPages={3}
      enlargement={5}
      onClick={[MockFunction]}
      qaId=""
    >
      <PageBubble
        isActive={false}
        key="5"
        onClick={[Function]}
        page={5}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-5"
          onClick={[Function]}
        >
          <button
            className="c0 c1"
            data-qaid="-page-5"
            onClick={[Function]}
          >
            5
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={true}
        key="6"
        onClick={[Function]}
        page={6}
        qaId=""
      >
        <Styled(styled.div)
          color="primary"
        >
          <div
            className="c4 c1"
            color="primary"
          >
            6
          </div>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="7"
        onClick={[Function]}
        page={7}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-7"
          onClick={[Function]}
        >
          <button
            className="c0 c1"
            data-qaid="-page-7"
            onClick={[Function]}
          >
            7
          </button>
        </Styled(styled.div)>
      </PageBubble>
    </Pages>
    <Ellipsis>
      <styled.div>
        <div
          className="c2"
        >
          <Icon
            name="ellipsisHorizontal"
          >
            <styled.i
              className="icon-ellipsisHorizontal "
            >
              <i
                className="c3 icon-ellipsisHorizontal "
              />
            </styled.i>
          </Icon>
        </div>
      </styled.div>
    </Ellipsis>
    <PageBubble
      isActive={false}
      onClick={[Function]}
      page={15}
      qaId=""
    >
      <Styled(styled.div)
        as="button"
        clickable={true}
        data-qaid="-page-15"
        onClick={[Function]}
      >
        <button
          className="c0 c1"
          data-qaid="-page-15"
          onClick={[Function]}
        >
          15
        </button>
      </Styled(styled.div)>
    </PageBubble>
  </Compact>
</Component>
`;

exports[`Pagination <Compact /> it renders correctly when the first page is active 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #039842;
  color: #FFFFFF;
  font-weight: 600;
}

.c2 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c2:hover {
  background-color: rgba(17,17,17,0.1);
}

.c3 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  margin: 0 4px;
}

.c4 {
  font-family: 'sofarsounds-icon-font' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4:before {
  color: #000000;
}

.c4.icon-facebook:before {
  content: '\\e920';
}

.c4.icon-instagram:before {
  content: '\\e929';
}

.c4.icon-spotify:before {
  content: '\\e937';
}

.c4.icon-twitter:before {
  content: '\\e93f';
}

.c4.icon-youtube:before {
  content: '\\e944';
}

.c4.icon-facebookOutline:before {
  content: '\\e91e';
}

.c4.icon-instagramOutline:before {
  content: '\\e924';
}

.c4.icon-spotifyOutline:before {
  content: '\\e927';
}

.c4.icon-twitterOutline:before {
  content: '\\e92d';
}

.c4.icon-youtubeOutline:before {
  content: '\\e92e';
}

.c4.icon-caretUp:before {
  content: '\\e932';
}

.c4.icon-caretDown:before {
  content: '\\e919';
}

.c4.icon-caretLeft:before {
  content: '\\e933';
}

.c4.icon-caretRight:before {
  content: '\\e934';
}

.c4.icon-caretCircleDown:before {
  content: '\\e91b';
}

.c4.icon-chevronLeft:before {
  content: '\\e92a';
}

.c4.icon-chevronRight:before {
  content: '\\e93c';
}

.c4.icon-chevronUp:before {
  content: '\\e93b';
}

.c4.icon-chevronDown:before {
  content: '\\e931';
}

.c4.icon-moveVertical:before {
  content: '\\e92c';
}

.c4.icon-check:before {
  content: '\\e938';
}

.c4.icon-checkCircle:before {
  content: '\\e902';
}

.c4.icon-checkSquare:before {
  content: '\\e943';
}

.c4.icon-alertCircle:before {
  content: '\\e91a';
}

.c4.icon-alertTriangle:before {
  content: '\\e901';
}

.c4.icon-calendar:before {
  content: '\\e917';
}

.c4.icon-time:before {
  content: '\\e93a';
}

.c4.icon-timeHand:before {
  content: '\\e939';
}

.c4.icon-calendarAdd:before {
  content: '\\e93d';
}

.c4.icon-byob:before {
  content: '\\e908';
}

.c4.icon-close:before {
  content: '\\e918';
}

.c4.icon-commercial:before {
  content: '\\e915';
}

.c4.icon-disabled:before {
  content: '\\e910';
}

.c4.icon-eye:before {
  content: '\\e91c';
}

.c4.icon-video:before {
  content: '\\e921';
}

.c4.icon-happyMask:before {
  content: '\\e922';
}

.c4.icon-helpCircleOutline:before {
  content: '\\e925';
}

.c4.icon-ellipsisHorizontal:before {
  content: '\\e92b';
}

.c4.icon-no:before {
  content: '\\e92f';
}

.c4.icon-pet:before {
  content: '\\e907';
}

.c4.icon-readGlasses:before {
  content: '\\e930';
}

.c4.icon-residential:before {
  content: '\\e916';
}

.c4.icon-tree:before {
  content: '\\e906';
}

.c4.icon-heartPulse:before {
  content: '\\e91f';
}

.c4.icon-homeWorld:before {
  content: '\\e923';
}

.c4.icon-travelWorld:before {
  content: '\\e928';
}

.c4.icon-musicTicket:before {
  content: '\\e926';
}

.c4.icon-musicLove:before {
  content: '\\e91d';
}

.c4.icon-plus:before {
  content: '\\e935';
}

.c4.icon-padlock:before {
  content: '\\e936';
}

.c4.icon-search:before {
  content: '\\e830';
}

.c4.icon-music:before {
  content: '\\e942';
}

.c4.icon-mail:before {
  content: '\\e941';
}

.c4.icon-expandHorizontal:before {
  content: '\\e93e';
}

.c4.icon-reset:before {
  content: '\\e912';
}

.c4.icon-pencil:before {
  content: '\\e904';
}

.c4.icon-trashCan:before {
  content: '\\e94a';
}

.c4.icon-fileFolder:before {
  content: '\\e940';
}

.c4.icon-arrowUp:before {
  content: '\\e913';
}

.c4.icon-arrowLeft:before {
  content: '\\e949';
}

.c4.icon-info:before {
  content: '\\e90d';
}

.c4.icon-infoOutline:before {
  content: '\\e948';
}

.c4.icon-feedback:before {
  content: '\\e905';
}

.c4.icon-feedbackOutline:before {
  content: '\\e947';
}

.c4.icon-media:before {
  content: '\\e909';
}

.c4.icon-mediaOutline:before {
  content: '\\e946';
}

.c4.icon-concert:before {
  content: '\\e90a';
}

.c4.icon-concertOutline:before {
  content: '\\e945';
}

.c4.icon-map:before {
  content: '\\e914';
}

.c4.icon-grid:before {
  content: '\\e903';
}

.c4.icon-photos:before {
  content: '\\e911';
}

.c4.icon-artistParking:before {
  content: '\\e90f';
}

.c4.icon-guestParking:before {
  content: '\\e90e';
}

.c4.icon-eventSetUp:before {
  content: '\\e90c';
}

.c4.icon-fanExperience:before {
  content: '\\e90b';
}

.c4.icon-rock:before {
  content: '\\e900';
}

<Component
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
        "large": "8px",
      },
      "colors": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueChristmas": "#3498DB",
        "blueMagic": "#34495E",
        "blueSmoke": "#949494",
        "brownSugar": "#9B525F",
        "checkBerry": "#98035A",
        "darkSmoke": "#767676",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "greenGarden": "#19BC9B",
        "greenOnions": "#8BC34B",
        "macyGrey": "#DBDBDB",
        "mellowYellow": "#F1C410",
        "orangeCrush": "#F39C12",
        "paintItBlack": "#333333",
        "peaches": "#F99973",
        "pinkTriangle": "#E91E63",
        "primary": "#039842",
        "purpleHaze": "#3F51B5",
        "purplePills": "#9B59B6",
        "redRedWine": "#EF4423",
        "royalBlood": "#FF5000",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
        "yellowSubmarine": "#FFD426",
      },
      "dimensions": Object {
        "button": Object {
          "default": Object {
            "height": "44px",
            "padding": "0 25px",
          },
          "small": Object {
            "height": "40px",
            "padding": "0 15px",
          },
        },
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
        "radioBox": "20px",
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": Object {
          "lg": "48px",
          "md": "34px",
          "xs": "24px",
        },
        "h2": Object {
          "lg": "34px",
          "md": "24px",
          "xs": "20px",
        },
        "h3": Object {
          "lg": "24px",
          "md": "20px",
          "xs": "16px",
        },
        "h4": Object {
          "lg": "20px",
          "md": "16px",
          "xs": "16px",
        },
        "h5": Object {
          "lg": "16px",
          "md": "14px",
          "xs": "14px",
        },
        "h6": Object {
          "lg": "14px",
          "md": "14px",
          "xs": "14px",
        },
        "overline": "10px",
        "title": Object {
          "lg": "54px",
          "md": "38px",
          "xs": "26px",
        },
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Compact
    currentPage={1}
    onClickPage={[MockFunction]}
    totalPages={15}
  >
    <Pages
      currentPage={1}
      displayPages={5}
      onClick={[MockFunction]}
      qaId=""
    >
      <PageBubble
        isActive={true}
        key="1"
        onClick={[Function]}
        page={1}
        qaId=""
      >
        <Styled(styled.div)
          color="primary"
        >
          <div
            className="c0 c1"
            color="primary"
          >
            1
          </div>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="2"
        onClick={[Function]}
        page={2}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-2"
          onClick={[Function]}
        >
          <button
            className="c2 c1"
            data-qaid="-page-2"
            onClick={[Function]}
          >
            2
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="3"
        onClick={[Function]}
        page={3}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-3"
          onClick={[Function]}
        >
          <button
            className="c2 c1"
            data-qaid="-page-3"
            onClick={[Function]}
          >
            3
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="4"
        onClick={[Function]}
        page={4}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-4"
          onClick={[Function]}
        >
          <button
            className="c2 c1"
            data-qaid="-page-4"
            onClick={[Function]}
          >
            4
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="5"
        onClick={[Function]}
        page={5}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-5"
          onClick={[Function]}
        >
          <button
            className="c2 c1"
            data-qaid="-page-5"
            onClick={[Function]}
          >
            5
          </button>
        </Styled(styled.div)>
      </PageBubble>
    </Pages>
    <Ellipsis>
      <styled.div>
        <div
          className="c3"
        >
          <Icon
            name="ellipsisHorizontal"
          >
            <styled.i
              className="icon-ellipsisHorizontal "
            >
              <i
                className="c4 icon-ellipsisHorizontal "
              />
            </styled.i>
          </Icon>
        </div>
      </styled.div>
    </Ellipsis>
    <PageBubble
      isActive={false}
      onClick={[Function]}
      page={15}
      qaId=""
    >
      <Styled(styled.div)
        as="button"
        clickable={true}
        data-qaid="-page-15"
        onClick={[Function]}
      >
        <button
          className="c2 c1"
          data-qaid="-page-15"
          onClick={[Function]}
        >
          15
        </button>
      </Styled(styled.div)>
    </PageBubble>
  </Compact>
</Component>
`;

exports[`Pagination <Compact /> it renders correctly when the last page is active 1`] = `
.c0 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(17,17,17,0.1);
}

.c2 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  width: 36px;
  height: 36px;
  margin: 0;
  padding: 0;
  font-size: 14px;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  border: none;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #039842;
  color: #FFFFFF;
  font-weight: 600;
}

.c1 {
  margin: 0 4px;
}

.c3 {
  font-family: 'sofarsounds-icon-font' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3:before {
  color: #000000;
}

.c3.icon-facebook:before {
  content: '\\e920';
}

.c3.icon-instagram:before {
  content: '\\e929';
}

.c3.icon-spotify:before {
  content: '\\e937';
}

.c3.icon-twitter:before {
  content: '\\e93f';
}

.c3.icon-youtube:before {
  content: '\\e944';
}

.c3.icon-facebookOutline:before {
  content: '\\e91e';
}

.c3.icon-instagramOutline:before {
  content: '\\e924';
}

.c3.icon-spotifyOutline:before {
  content: '\\e927';
}

.c3.icon-twitterOutline:before {
  content: '\\e92d';
}

.c3.icon-youtubeOutline:before {
  content: '\\e92e';
}

.c3.icon-caretUp:before {
  content: '\\e932';
}

.c3.icon-caretDown:before {
  content: '\\e919';
}

.c3.icon-caretLeft:before {
  content: '\\e933';
}

.c3.icon-caretRight:before {
  content: '\\e934';
}

.c3.icon-caretCircleDown:before {
  content: '\\e91b';
}

.c3.icon-chevronLeft:before {
  content: '\\e92a';
}

.c3.icon-chevronRight:before {
  content: '\\e93c';
}

.c3.icon-chevronUp:before {
  content: '\\e93b';
}

.c3.icon-chevronDown:before {
  content: '\\e931';
}

.c3.icon-moveVertical:before {
  content: '\\e92c';
}

.c3.icon-check:before {
  content: '\\e938';
}

.c3.icon-checkCircle:before {
  content: '\\e902';
}

.c3.icon-checkSquare:before {
  content: '\\e943';
}

.c3.icon-alertCircle:before {
  content: '\\e91a';
}

.c3.icon-alertTriangle:before {
  content: '\\e901';
}

.c3.icon-calendar:before {
  content: '\\e917';
}

.c3.icon-time:before {
  content: '\\e93a';
}

.c3.icon-timeHand:before {
  content: '\\e939';
}

.c3.icon-calendarAdd:before {
  content: '\\e93d';
}

.c3.icon-byob:before {
  content: '\\e908';
}

.c3.icon-close:before {
  content: '\\e918';
}

.c3.icon-commercial:before {
  content: '\\e915';
}

.c3.icon-disabled:before {
  content: '\\e910';
}

.c3.icon-eye:before {
  content: '\\e91c';
}

.c3.icon-video:before {
  content: '\\e921';
}

.c3.icon-happyMask:before {
  content: '\\e922';
}

.c3.icon-helpCircleOutline:before {
  content: '\\e925';
}

.c3.icon-ellipsisHorizontal:before {
  content: '\\e92b';
}

.c3.icon-no:before {
  content: '\\e92f';
}

.c3.icon-pet:before {
  content: '\\e907';
}

.c3.icon-readGlasses:before {
  content: '\\e930';
}

.c3.icon-residential:before {
  content: '\\e916';
}

.c3.icon-tree:before {
  content: '\\e906';
}

.c3.icon-heartPulse:before {
  content: '\\e91f';
}

.c3.icon-homeWorld:before {
  content: '\\e923';
}

.c3.icon-travelWorld:before {
  content: '\\e928';
}

.c3.icon-musicTicket:before {
  content: '\\e926';
}

.c3.icon-musicLove:before {
  content: '\\e91d';
}

.c3.icon-plus:before {
  content: '\\e935';
}

.c3.icon-padlock:before {
  content: '\\e936';
}

.c3.icon-search:before {
  content: '\\e830';
}

.c3.icon-music:before {
  content: '\\e942';
}

.c3.icon-mail:before {
  content: '\\e941';
}

.c3.icon-expandHorizontal:before {
  content: '\\e93e';
}

.c3.icon-reset:before {
  content: '\\e912';
}

.c3.icon-pencil:before {
  content: '\\e904';
}

.c3.icon-trashCan:before {
  content: '\\e94a';
}

.c3.icon-fileFolder:before {
  content: '\\e940';
}

.c3.icon-arrowUp:before {
  content: '\\e913';
}

.c3.icon-arrowLeft:before {
  content: '\\e949';
}

.c3.icon-info:before {
  content: '\\e90d';
}

.c3.icon-infoOutline:before {
  content: '\\e948';
}

.c3.icon-feedback:before {
  content: '\\e905';
}

.c3.icon-feedbackOutline:before {
  content: '\\e947';
}

.c3.icon-media:before {
  content: '\\e909';
}

.c3.icon-mediaOutline:before {
  content: '\\e946';
}

.c3.icon-concert:before {
  content: '\\e90a';
}

.c3.icon-concertOutline:before {
  content: '\\e945';
}

.c3.icon-map:before {
  content: '\\e914';
}

.c3.icon-grid:before {
  content: '\\e903';
}

.c3.icon-photos:before {
  content: '\\e911';
}

.c3.icon-artistParking:before {
  content: '\\e90f';
}

.c3.icon-guestParking:before {
  content: '\\e90e';
}

.c3.icon-eventSetUp:before {
  content: '\\e90c';
}

.c3.icon-fanExperience:before {
  content: '\\e90b';
}

.c3.icon-rock:before {
  content: '\\e900';
}

<Component
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
        "large": "8px",
      },
      "colors": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueChristmas": "#3498DB",
        "blueMagic": "#34495E",
        "blueSmoke": "#949494",
        "brownSugar": "#9B525F",
        "checkBerry": "#98035A",
        "darkSmoke": "#767676",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "greenGarden": "#19BC9B",
        "greenOnions": "#8BC34B",
        "macyGrey": "#DBDBDB",
        "mellowYellow": "#F1C410",
        "orangeCrush": "#F39C12",
        "paintItBlack": "#333333",
        "peaches": "#F99973",
        "pinkTriangle": "#E91E63",
        "primary": "#039842",
        "purpleHaze": "#3F51B5",
        "purplePills": "#9B59B6",
        "redRedWine": "#EF4423",
        "royalBlood": "#FF5000",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
        "yellowSubmarine": "#FFD426",
      },
      "dimensions": Object {
        "button": Object {
          "default": Object {
            "height": "44px",
            "padding": "0 25px",
          },
          "small": Object {
            "height": "40px",
            "padding": "0 15px",
          },
        },
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
        "radioBox": "20px",
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": Object {
          "lg": "48px",
          "md": "34px",
          "xs": "24px",
        },
        "h2": Object {
          "lg": "34px",
          "md": "24px",
          "xs": "20px",
        },
        "h3": Object {
          "lg": "24px",
          "md": "20px",
          "xs": "16px",
        },
        "h4": Object {
          "lg": "20px",
          "md": "16px",
          "xs": "16px",
        },
        "h5": Object {
          "lg": "16px",
          "md": "14px",
          "xs": "14px",
        },
        "h6": Object {
          "lg": "14px",
          "md": "14px",
          "xs": "14px",
        },
        "overline": "10px",
        "title": Object {
          "lg": "54px",
          "md": "38px",
          "xs": "26px",
        },
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Compact
    currentPage={15}
    onClickPage={[MockFunction]}
    totalPages={15}
  >
    <PageBubble
      isActive={false}
      onClick={[Function]}
      page={1}
      qaId=""
    >
      <Styled(styled.div)
        as="button"
        clickable={true}
        data-qaid="-page-1"
        onClick={[Function]}
      >
        <button
          className="c0 c1"
          data-qaid="-page-1"
          onClick={[Function]}
        >
          1
        </button>
      </Styled(styled.div)>
    </PageBubble>
    <Ellipsis>
      <styled.div>
        <div
          className="c2"
        >
          <Icon
            name="ellipsisHorizontal"
          >
            <styled.i
              className="icon-ellipsisHorizontal "
            >
              <i
                className="c3 icon-ellipsisHorizontal "
              />
            </styled.i>
          </Icon>
        </div>
      </styled.div>
    </Ellipsis>
    <Pages
      currentPage={15}
      displayPages={5}
      enlargement={11}
      onClick={[MockFunction]}
      qaId=""
    >
      <PageBubble
        isActive={false}
        key="11"
        onClick={[Function]}
        page={11}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-11"
          onClick={[Function]}
        >
          <button
            className="c0 c1"
            data-qaid="-page-11"
            onClick={[Function]}
          >
            11
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="12"
        onClick={[Function]}
        page={12}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-12"
          onClick={[Function]}
        >
          <button
            className="c0 c1"
            data-qaid="-page-12"
            onClick={[Function]}
          >
            12
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="13"
        onClick={[Function]}
        page={13}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-13"
          onClick={[Function]}
        >
          <button
            className="c0 c1"
            data-qaid="-page-13"
            onClick={[Function]}
          >
            13
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={false}
        key="14"
        onClick={[Function]}
        page={14}
        qaId=""
      >
        <Styled(styled.div)
          as="button"
          clickable={true}
          data-qaid="-page-14"
          onClick={[Function]}
        >
          <button
            className="c0 c1"
            data-qaid="-page-14"
            onClick={[Function]}
          >
            14
          </button>
        </Styled(styled.div)>
      </PageBubble>
      <PageBubble
        isActive={true}
        key="15"
        onClick={[Function]}
        page={15}
        qaId=""
      >
        <Styled(styled.div)
          color="primary"
        >
          <div
            className="c4 c1"
            color="primary"
          >
            15
          </div>
        </Styled(styled.div)>
      </PageBubble>
    </Pages>
  </Compact>
</Component>
`;
